# eddie-interface

./: .clang-format  CMakeLists.txt  README.md  package.xml  set_interface_permissions.sh
include/eddie-ros/: eddie_ros.fsm  eddie_ros.fsm.hpp  fsm.hpp  interface.hpp
src/: interface-parameters.cpp  interface-test.cpp  interface.cpp
urdf/: eddie.urdf
