<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eddie-ros</name>
  <version>0.0.1</version>
  <description>ROS Interface Layer for Eddie</description>
  <maintainer email="vamsikalagaturu@gmail.com">Vamsi Kalagaturu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>robif2b</depend>
  <depend>coord2b</depend>
  <depend>orocos_kdl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
